# rust_icon_gen

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile.toml  README.md  icon_repos.toml  leptosfmt.toml
.github/workflows/: ci.yaml  preview.yaml
examples/leptos_icons/: Cargo.toml  README.md
examples/leptos_icons/src/: main.rs
generator/: Cargo.toml
generator/src/: config.rs  main.rs  types.rs
generator/templates/: icon_list.rs  icon_list.rs.tpl  icon_set_mod.rs  icon_set_mod.rs.tpl  icon_sets_Cargo.toml  icon_sets_Cargo.toml.tpl  leptos_icon_gen_Cargo.toml  leptos_icon_gen_Cargo.toml.tpl  svg.rs.tpl
icon_sets/: Cargo.toml  README.md
icon_sets/src/: lib.rs
icon_sets/src/icons/: ant_design_icons.rs  bootstrap_icons.rs  boxicons.rs  charm_icons.rs  codicons.rs  css_gg.rs  feather.rs  font_awesome.rs  heroicons.rs  ionicons.rs  lucide.rs  microns.rs  mod.rs  octicons.rs  remixicon.rs  tabler_icons.rs
leptos_icon_gen/: Cargo.toml  README.md
leptos_icon_gen/src/: lib.rs
preview/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  package.json  tailwind.config.js
preview/src/: main.rs
preview/style/: main.css  tailwind.css
