[package]
name = "generator"
version.workspace = true
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.1"
once_cell = "1.18.0"
roxmltree = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
